// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SlideTransition/> position: bottom-center should display notification 1`] = `"<div>notification</div>"`;

exports[`<SlideTransition/> position: bottom-center should display notification 2`] = `
Array [
  Array [
    Array [
      Object {
        "opacity": 0,
        "transform": "translateY(100%)",
      },
      Object {
        "opacity": 1,
        "transform": "translateY(0)",
      },
    ],
    Object {
      "duration": 300,
      "fill": "forwards",
    },
  ],
]
`;

exports[`<SlideTransition/> position: bottom-center should display notification 3`] = `"<div duration=\\"1\\">notification</div>"`;

exports[`<SlideTransition/> position: bottom-center should display notification 4`] = `
Array [
  Array [
    Array [
      Object {
        "opacity": 0,
        "transform": "translateY(100%)",
      },
    ],
    Object {
      "duration": 1,
      "fill": "forwards",
    },
  ],
]
`;

exports[`<SlideTransition/> position: bottom-left should display notification 1`] = `"<div>notification</div>"`;

exports[`<SlideTransition/> position: bottom-left should display notification 2`] = `
Array [
  Array [
    Array [
      Object {
        "opacity": 0,
        "transform": "translateX(-100%)",
      },
      Object {
        "opacity": 1,
        "transform": "translateX(0)",
      },
    ],
    Object {
      "duration": 300,
      "fill": "forwards",
    },
  ],
]
`;

exports[`<SlideTransition/> position: bottom-left should display notification 3`] = `"<div duration=\\"1\\">notification</div>"`;

exports[`<SlideTransition/> position: bottom-left should display notification 4`] = `
Array [
  Array [
    Array [
      Object {
        "opacity": 0,
        "transform": "translateX(-100%)",
      },
    ],
    Object {
      "duration": 1,
      "fill": "forwards",
    },
  ],
]
`;

exports[`<SlideTransition/> position: bottom-right should display notification 1`] = `"<div>notification</div>"`;

exports[`<SlideTransition/> position: bottom-right should display notification 2`] = `
Array [
  Array [
    Array [
      Object {
        "opacity": 0,
        "transform": "translateX(100%)",
      },
      Object {
        "opacity": 1,
        "transform": "translateX(0)",
      },
    ],
    Object {
      "duration": 300,
      "fill": "forwards",
    },
  ],
]
`;

exports[`<SlideTransition/> position: bottom-right should display notification 3`] = `"<div duration=\\"1\\">notification</div>"`;

exports[`<SlideTransition/> position: bottom-right should display notification 4`] = `
Array [
  Array [
    Array [
      Object {
        "opacity": 0,
        "transform": "translateX(100%)",
      },
    ],
    Object {
      "duration": 1,
      "fill": "forwards",
    },
  ],
]
`;

exports[`<SlideTransition/> position: top-center should display notification 1`] = `"<div>notification</div>"`;

exports[`<SlideTransition/> position: top-center should display notification 2`] = `
Array [
  Array [
    Array [
      Object {
        "opacity": 0,
        "transform": "translateY(-100%)",
      },
      Object {
        "opacity": 1,
        "transform": "translateY(0)",
      },
    ],
    Object {
      "duration": 300,
      "fill": "forwards",
    },
  ],
]
`;

exports[`<SlideTransition/> position: top-center should display notification 3`] = `"<div duration=\\"1\\">notification</div>"`;

exports[`<SlideTransition/> position: top-center should display notification 4`] = `
Array [
  Array [
    Array [
      Object {
        "opacity": 0,
        "transform": "translateY(-100%)",
      },
    ],
    Object {
      "duration": 1,
      "fill": "forwards",
    },
  ],
]
`;

exports[`<SlideTransition/> position: top-left should display notification 1`] = `"<div>notification</div>"`;

exports[`<SlideTransition/> position: top-left should display notification 2`] = `
Array [
  Array [
    Array [
      Object {
        "opacity": 0,
        "transform": "translateX(-100%)",
      },
      Object {
        "opacity": 1,
        "transform": "translateX(0)",
      },
    ],
    Object {
      "duration": 300,
      "fill": "forwards",
    },
  ],
]
`;

exports[`<SlideTransition/> position: top-left should display notification 3`] = `"<div duration=\\"1\\">notification</div>"`;

exports[`<SlideTransition/> position: top-left should display notification 4`] = `
Array [
  Array [
    Array [
      Object {
        "opacity": 0,
        "transform": "translateX(-100%)",
      },
    ],
    Object {
      "duration": 1,
      "fill": "forwards",
    },
  ],
]
`;

exports[`<SlideTransition/> position: top-right should display notification 1`] = `"<div>notification</div>"`;

exports[`<SlideTransition/> position: top-right should display notification 2`] = `
Array [
  Array [
    Array [
      Object {
        "opacity": 0,
        "transform": "translateX(100%)",
      },
      Object {
        "opacity": 1,
        "transform": "translateX(0)",
      },
    ],
    Object {
      "duration": 300,
      "fill": "forwards",
    },
  ],
]
`;

exports[`<SlideTransition/> position: top-right should display notification 3`] = `"<div duration=\\"1\\">notification</div>"`;

exports[`<SlideTransition/> position: top-right should display notification 4`] = `
Array [
  Array [
    Array [
      Object {
        "opacity": 0,
        "transform": "translateX(100%)",
      },
    ],
    Object {
      "duration": 1,
      "fill": "forwards",
    },
  ],
]
`;
